# marimo-claude

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
notebooks/: duckdb_astro.py
skills/marimo-pair/: README.md  SKILL.md
skills/marimo-pair/reference/: gotchas.md
skills/marimo-pair/scripts/: discover-servers.sh  execute-code.sh
src/marimo_claude/: __init__.py  __main__.py  bridge.py  process.py  server.py
